test/error/iocheck/err5.rzy
// Error: query is not allowed to output


interface
  IfaceEvent
    function event();
  end
  
  IfaceQuerry
    function query():R{0,100};
  end
  
component
  Err5
    input
      in  : IfaceQuerry;
    
    output
      out : IfaceEvent;
      
    implementation elementary
    
    function bar()
      out.event();
    end
    
    function foo()
      bar();
    end
    
    function in.query():R{0,100}
      foo();
      return 0;
    end
    
  end

